--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
         <ul>
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a class="active" href="Zen/index.html">Zen</a></li>
+                <li><a class="active" href="Zen/zen.html">Zen</a></li>
               </ul>
               
 
