--- a/Zen/zen.html
+++ b/Zen/zen.html
@@ -76,8 +76,8 @@
 
 <body id="css-zen-garden">
 		<ul>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a class="active" href="Zen/zen.html">Zen</a></li>
+                <li><a class="active" href="#index.html">Home</a></li>
+                <li><a class="active" href="#Zen/zen.html">Zen</a></li>
               </ul>
 <div class="page-wrapper">
 
