--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 </head>
 <body>
         <ul>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a class="active" href="Zen/zen.html">Zen</a></li>
+                <li><a class="active" href="#index.html">Home</a></li>
+                <li><a class="active" href="#Zen/zen.html">Zen</a></li>
               </ul>
               
 
